# fraguracy

./: .gitignore  CHANGES.md  Cargo.toml  README.md  analyze_indel_errors.md  analyze_indel_errors.py  cli-tests.sh  lua-api.md  plot.py
.cargo/: config.toml
scripts/: analyze_indel_errors.py  count-errors.py
src/: combine_counts.rs  combine_errors.rs  denominator.rs  files.rs  fraguracy.rs  homopolymer.rs  lua.rs  main.rs  plot.rs
test-data/: a.errors.bed  b.errors.bed
