[package]
name = "fraguracy"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = {features = ["libdeflate", "static", "gcs", "s3"], git = "https://github.com/brentp/rust-htslib.git", branch = "bp-hts-sys" }
syn = "2.0.87"

libc = "*"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
itertools = "0.10.5"
rayon = "1.7.0"
linear-map = "1.2.0"
rust-lapper = "1.1.0"
flate2 = "1.0.25"
bpci = "0.1.0"
clap = {version ="4.5.20", features=["derive"]}
regex = "1.11.1"
#plotly = "0.8.3"
#polars = { version = "0.27.2", features = ["lazy", "strings"] }


[profile.release]
lto = "fat"
codegen-units = 1
