[package]
name = "fraguracy"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = {features = ["libdeflate", "static", "gcs", "s3"], version = "0.49.0"}
syn = "2.0.87"
idna = "1.0.0"


libc = "*"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
itertools = "0.10.5"
rayon = "1.7.0"
linear-map = "1.2.0"
rust-lapper = "1.1.0"
flate2 = "1.0.25"
bpci = "0.1.0"
clap = {version ="4", features=["derive"]}
regex = "1.11.1"
mlua = { version = "0.10.3", features = ["luau", "send"] }
anyhow = "1.0.98"
#plotly = "0.8.3"
#polars = { version = "0.27.2", features = ["lazy", "strings"] }


[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
